--- a/TeamCode/src/main/res/xml/do_not_use_chopper_config.xml
+++ b/TeamCode/src/main/res/xml/do_not_use_chopper_config.xml
@@ -40,165 +40,27 @@
 
     <LynxUsbDevice
         name="Expansion Hub Portal 1"
-        serialNumber="(embedded)" parentModuleAddress="5">
+        serialNumber="(embedded)" parentModuleAddress="2">
 
-        <LynxModule name="[...]" port="[...]">
-
-            <!-- The built-in IMU is always port="0" bus="0" -->
+        <LynxModule name="Control Hub" port="2">
             <LynxEmbeddedIMU name="imu" port="0" bus="0" />
 
-            <!-- **********************************************************
-
-            DC Motors
-
-            The "port" value refers to the physical port where the motor
-            is connected to the REV expansion hub, numbered 0 - 3.
-
-            The element named "Motor" is generic, but it will not set
-            tuned PID(F) values for the type of motor plugged into the hub.
-
-            You will observe more consistent velocity PID (RUN_WITH_ENCODERS)
-            or RUN_TO_POSITION behavior if you can use the specific motor types
-            provided by the SDK.
-
-            In this first example, you'll notice a color comment. We've found
-            that it is very helpful to use wire marking tape on the ports on
-            the expansion hub, the cables that plug into them, both sides
-            of any connections between the hub and the device, and the devices
-            itself. It makes it very easy to identify what to check or replace
-            when something is not working correctly.
-
-            ************************************************************* -->
-
-            <Motor name="rightRear"  port="0" /> <!--  -->
-            <Motor name="leftRearAndLeftEncoder"  port="1" /> <!--  -->
-            <Motor name="rightFrontAndFrontEncoder"  port="2" /> <!--  -->
-            <Motor name="leftFrontAndRightEncoder"  port="3" /> <!--  -->
-
-            <!--
-            Andymark Gearmotors
-
-            IMPORTANT: The NeveRest20GearMotor type does not contain
-            appropriate values for the orbital gear motor! You will need to
-            set these directly in software (at least for now)
-            -->
-
-            <NeveRest3.7v1Gearmotor name="[...]" port="[...]" />
-            <NeveRest20Gearmotor name="[...]" port="[...]" />
-            <NeveRest40Gearmotor name="[...]" port="[...]" />
-            <NeveRest60Gearmotor name="[...]" port="[...]" />
-
-            <!--
-            REV Robotics Gearmotors
-            -->
-
-            <RevRobotics20HDHexMotor name="[...]" port="[...]" />
-            <RevRobotics40HDHexMotor name="[...]" port="[...]" />
-            <RevRoboticsCoreHexMotor name="[...]" port="[...]" />
-
-            <!--
-            GoBILDA Gearmotors
-             -->
-
-            <goBILDA5201SeriesMotor name="[...]" port="[...]" />
-            <goBILDA5202SeriesMotor name="[...]" port="[...]" />
-
-            <!--
-            Tetrix Gearmotors
-            -->
-
-            <TetrixMotor  name="[...]" port="[...]" />
-
-            <!-- *************************************************************
-
-            Servos are pretty straightforward. Ports are numbered 0-5
-
-            Configuring a servo as a ContinuousRotationServo in this file
-            will present an interface in software that "feels" more like a
-            DCMotor for servos that are, or are able to be put into continuous
-            rotation mode.
-
-            See com.qualcomm.robotcore.hardware.CRServo in the SDK for more
-            details.
-
-            ************************************************************* -->
-
-            <Servo name="[...] port=[...]" />
-            <ContinuousRotationServo name="[...]" port="[...]" />
+            <Motor name="rightRear"  port="0" />
+            <Motor name="leftRearAndLeftEncoder"  port="1" />
+            <Motor name="rightFrontAndFrontEncoder"  port="2" />
+            <Motor name="leftFrontAndRightEncoder"  port="3" />
 
             <Servo name="droneServo" port="2" />
             <Servo name="holder1" port="3" />
             <Servo name="holder2" port="4" />
             <Servo name="wrist" port="5" />
 
-            <!--
-
-            REV SparkMinis plug into a servo port, and allow you to use a 12V
-            gearmotor as you would a ContinuousRotationServo. When used from
-            your code they are of type DcMotorSimple.
-
-            -->
-
-            <RevSPARKMini name="[...]" port="[...]" />
-
-            <!-- *************************************************************
-
-            Digital Devices on REV hubs look like this.
-
-            REV's magnetic limit switch (http://www.revrobotics.com/rev-31-1462/)
-            sends output voltage on 'n' and 'n+1', so odd or even port
-            numbers work for the same sensor.
-
-            However, REV's touch sensor, which can either be configured as
-            a plain "DigitalDevice" or "RevTouchSensor" always sends on n+1,
-            so that will always be an odd port number.
-
-            Since we don't use any of REV's splitter cables on our robots,
-            we try and always use the odd port number in case we switch
-            one type of sensor out for the other.
-
-            If you're attaching something else to your REV Hub to the digital
-            I/O ports, check your spec sheet for which pin will send output
-            signal, and set "port" appropriately.
-
-            ************************************************************* -->
-
-            <DigitalDevice name="[...]" port="[... (odd)]" />
-            <RevTouchSensor name="[...] port=[... (odd)]" />
-
-            <!-- *************************************************************
-
-            I2C Devices
-
-            Bus numbers (sockets on the hub) run from 0 to 3. An I2C device
-            plugged into the physical socket labeled "0" on the hub should use
-            port="1" and bus="0". I2C devices plugged into sockets labeled 1-3
-            on the hub should use port="0" and bus="[socket number on hub]"
-
-            ************************************************************* -->
-
-            <!-- REV Time-of-Flight 2m Distance Sensor -->
-            <REV_VL53L0X_RANGE_SENSOR name="[...]" port="0" bus="[...]" />
-
-            <!-- V1 and V2 of the REV color/distance sensor -->
-
-            <LynxColorSensor name="[...]" port="0" bus="[...]" />
-
-            <!--
-
-            Use for the current v3 REV color sensor. NOTE that color and
-              distance values for v3 differ from V1-V2!
-
-            http://www.revrobotics.com/rev-31-1557/)
-
-            -->
-
             <RevColorSensorV3 name="[...]" port="0" bus="[...]" />
 
-            <RevBlinkinLedDriver name="[...]" port="0" bus="[...]" />
+            <!--<RevBlinkinLedDriver name="[...]" port="0" bus="[...]" />-->
         </LynxModule>
 
-        <LynxModule name="Secondary Hub" port="3">
+        <LynxModule name="Expansion Hub" port="3">
 
             <!-- *************************************************************
 
@@ -212,5 +74,7 @@
             <Motor name="leftSlide"  port="3" /> <!--  -->
 
         </LynxModule>
+
     </LynxUsbDevice>
+    <Webcam name="Webcam 1" serialNumber="B3D2712F"/>
 </Robot>
